# M2R-Julia-Sets

./: GUI_README.md  Julia.py  README.md  draw_qnewton.py  draw_threebrot.py  find_ray.py  hd_multibrot.py  install.sh  setup.cfg  setup.py
rustlib/: Cargo.toml
rustlib/src/: lib.rs
scripts/: draw_cnewton.py  draw_internal_ray.py  draw_mandelbrot.py  draw_mandelbrot_newton.py  draw_mandelbrot_report.py  draw_newton_fractal.py  draw_qnewton.py  draw_threebrot.py  equipot_image.py  hd_mandelbrot.py  images_for_report.py  julia_set_pics.py  make_test_case.py  multiprocessing_threebrot_test.py  pictures_for_rowan.py  pictures_for_rowan2.py  pictures_for_rowan3.py  test_equipot.py  test_general_map.py  test_mp_newton.py  wiki_images.py
src/julia/: __init__.py  __main__.py  cubic_map.py  general_map.py  map.py  quadratic_map.py
src/julia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/julia/gui/: __init__.py  __main__.py  constants.py  cubic.py  cubic_mandelbrot.py  cubic_newton.py  icon_b64.py  main_macos.py  quadratic.py  quadratic_newton.py  tools.py
src/julia/gui/assets/: threebrot.txt
src/julia/gui_obsolete/: __init__.py  cubic.py  quadratic.py
src/julia/gui_rebuild/: __init__.py  constants.py  cubic.py  cubic_newton.py  quadratic.py  quadratic_newton.py
tests/: test_map.py
tests/data/: threebrot_julia.pkl  threebrot_mandelbrot.pkl
