[package]
name = "rustlib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustlib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module", "num-complex"] }
numpy = "0.16"
ndarray = "0.15.3"
num-complex = "0.4"
itertools-num = "0.1.3"
